--- a/c1.md
+++ b/c1.md
@@ -1,4 +1,6 @@
-#[Bash Guide for Beginners](http://tldp.org/LDP/Bash-Beginners-Guide/html/sect_01_07.html)
+#Bash Guide for Beginners <br />
+Guide can be found [here](http://tldp.org/LDP/Bash-Beginners-Guide/html/sect_01_07.html)
+
 ## Chapter 1
 
 Where is the bash program located on your system? <br />
