--- a/c1.md
+++ b/c1.md
@@ -1,4 +1,5 @@
-#Bash Guide for Beginners <br />
+# Bash Guide for Beginners
+
 Guide can be found [here](http://tldp.org/LDP/Bash-Beginners-Guide/html/sect_01_07.html)
 
 ## Chapter 1
