--- a/c1.md
+++ b/c1.md
@@ -4,17 +4,17 @@ Guide can be found [here](http://tldp.org/LDP/Bash-Beginners-Guide/html/sect_01_
 
 ## Chapter 1
 
-1. Where is the bash program located on your system?
+> 1. Where is the bash program located on your system?
 - `/bin/bash`
 
-2. Use the --version option to find out which version you are running. <br />
+> 2. Use the --version option to find out which version you are running. <br />
 
-3. Which shell configuration files are read when you login to your system using the graphical user interface and then opening a terminal window? <br />
+> 3. Which shell configuration files are read when you login to your system using the graphical user interface and then opening a terminal window? <br />
 - `.bashrc` or `.bash_profile`
 - `.bashrc` interactive non-login session
 - `.bash_profile` login shells
 
-4. Are the following shells interactive shells? Are they login shells?
+> 4. Are the following shells interactive shells? Are they login shells?
 - A shell opened by clicking on the background of your graphical desktop, selecting "Terminal" or such from a menu. <b> A:Y, N (Mac OSX sources both .profile and .bashrc files. [Source](https://apple.stackexchange.com/questions/51036/what-is-the-difference-between-bash-profile-and-bashrc)) </b>
 
 - A shell that you get after issuing the command ssh localhost. login. ssh: secure remote login from one computer to another. <b> A: Y, Y </b>
@@ -27,22 +27,22 @@ Guide can be found [here](http://tldp.org/LDP/Bash-Beginners-Guide/html/sect_01_
 
 - A shell that you get on a remote host, for which you didn't have to give the login and/or password because you use SSH and maybe SSH keys.
 
-5. Can you explain why bash does not exit when you type Ctrl+C on the command line?
+> 5. Can you explain why bash does not exit when you type Ctrl+C on the command line?
 - Ctrl+C is an [interrupt signal](https://askubuntu.com/questions/890591/why-doesnt-ctrl-c-kill-the-terminal-itself/890597) to a process. The command line is not a process, so it will not get interrupted.
 - Instead, try Ctrl+D, which sends an EOF signal.
 
-6. Display directory stack content.
+> 6. Display directory stack content.
 - `dirs`
 - Directory stack refers to the list of recently visited directories
 
-7. If it is not yet the case, set your prompt so that it displays your location in the file system hierarchy, for instance add this line to ~/.bashrc: `export PS1="\u@\h \w> "`
+> 7. If it is not yet the case, set your prompt so that it displays your location in the file system hierarchy, for instance add this line to ~/.bashrc: `export PS1="\u@\h \w> "`
 
-8. Display hashed commands for your current shell session.
+> 8. Display hashed commands for your current shell session.
 - `hash`
 - Bash hashes results (values) of commands (keys) so as to prevent it from having to search `$PATH` for the same command. [Source] (https://unix.stackexchange.com/questions/86012/what-is-the-purpose-of-the-hash-command)
 
-9. How many processes are currently running on your system? Use ps and wc, the first line of output of ps is not a process!
+> 9. How many processes are currently running on your system? Use ps and wc, the first line of output of ps is not a process!
 - `ps | wc -l` 
 
-10. How to display the system hostname? Only the name, nothing more!
+> 10. How to display the system hostname? Only the name, nothing more!
 - `hostname -s`
